@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.815 2007-05-04 17:10:02 castaglia Exp $
+$Id: NEWS,v 1.816 2007-05-07 15:35:31 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -32,6 +32,8 @@ CVS
   by a different auth module.
 - Bug 2921 - NLST fails if using POSIX ACLs.  The mod_ls module, when
   handling the NLST command, was using an unnecessary access(2) check.
+- Bug 2864 - DisplayLogin should work regardless of chroot.  This now works
+  for DisplayQuit and DisplayTransferFiles as well.
 
 1.3.1rc2 - Released 12-Jan-2007
 --------------------------------
